focus localisation so far

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5082,25 +5082,55 @@
  TUR_uncrowned_king_of_syria_desc:0 "One of the members of the Union of Committee, Minister of the Navy and the recently assigned general governor of the Syrian provinces of the Ottoman Empire, Ahmed Cemâl Paşa is a man with great authority. Ever since his appointment, he was equipped with extraordinary powers to reform and centralize the Syrian provinces. As he has power high enough to even rival the central government, he's nicknamed as the Uncrowned King of Syria by many of his friends and foes."
  TUR_cemals_personal_territory:0 "Cemâl's Personal Territory"
  TUR_cemals_personal_territory_desc:0 "As Cemâl Paşa is sent to Syria to reform the provinces, he was given extraordinary power, power that no individual has even seen in these lands. This authority resulted in him to have these lands as his personal territory, having the power to do as he pleases. As he's the utmost authority in Syria, his decisions will directly shape the administration and society in these lands."
+ TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£command_power_max_texticon  Maximum Command Power Increase Multiplier: §G+10%§!\n\n"
  TUR_rewarding_loyalties:0 "Rewarding Loyalties"
  TUR_rewarding_loyalties_desc:0 "Above capabilities, Cemâl Paşa values loyalty more than anything. Turk, Arab, Kurd or Armenian, those who stand loyal to him will be rewarded while those standing against him will be punished. His strict importance to loyalty makes his inner circle trustable and easy to control."
- TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£command_power_max_texticon  Maximum Command Power Increase Multiplier: §G+10%§!\n\n"
  TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-50%§!\n\n"
- TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
- TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
- TUR_ottoman_state_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
- TUR_censor_the_opposition_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
- TUR_settle_arab_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
- TUR_the_ideal_province_tt:0 "Unlocks £decision_icon_small  §YMass Education§! Decisions in §YAleppo Vilayet§!,§YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YConstruction Endeavours§! Decisions in §YAleppo Vilayet§!,§YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n\nUnlocks £decision_icon_small  §YIntegrate Arab Citizens§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Jewish Citizens§! Decisions.\nThese decisions will become visible once the §YCentralization§! of their respective §YVilayets§! become §Y100%§!.\n"
- diplomatic_incident:0 "Diplomatic Incident"
- TUR_nationalize_railways_tt:0 "If at war with §Y[FRA.GetName]§!, these decisions will be replaced and we'll be able to §Yseize§! mentioned §Yrailways§! and §Yports§! without paying a price.\n"
+ TUR_syrian_reforms:0 "Syrian Reforms"
+ TUR_syrian_reforms_desc:0 "The main objective of Cemâl Paşa in the Syrian provinces is to reform and centralize these lands. As Cemâl Paşa will follow the path of centralization and integration of Syrian people and lands to the empire that was kickstarted with Tanzimat reforms, Syria will become an integral part of the empire."
+ TUR_dealing_with_the_arabist_movement:0 "Dealing with the Arabist Movement"
+ TUR_dealing_with_the_arabist_movement_desc:0 "Even before Cemâl Paşa departed for Syria, various Arabist parties were asking for local rule, decentralized power and even outright independence of the Arab lands. As such movements have started to gain traction in the following years, Cemâl Paşa will attend this separatist movement with great care."
  TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
+ TUR_raid_foreign_consulates:0 "Raid Foreign Consulates"
+ TUR_raid_foreign_consulates_desc:0 "We've been suspecting of some foreign powers for having connections with separatist movements in Syria. As our empire is embroiled in war with foreign powers, this makes up for the perfect justification to raid their consulates and seizing documents. Legitimate or not, we can use them to fabricate claims to deal with the separatists."
  TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
+ diplomatic_incident:0 "Diplomatic Incident"
+ TUR_frame_disloyal_elements:0 "Frame Disloyal Elements"
+ TUR_frame_disloyal_elements_desc:0 "There are various nobles, rulers and power holders in Syria that are not so loyal to our rule. If we frame them, we can fabricate claims for our actions against the Arabist movement."
  TUR_frame_disloyal_elements_tt:0 "This decision will add §Y1§! Oppression Justification.\n\n"
+ TUR_punishment_for_traitors:0 "Punishment for Traitors"
+ TUR_punishment_for_traitors_desc:0 "In the past years, our empire has lost swathes of lands. As separatist movements grow across our empire, we're under a threat of dissolution. Yet such traitors will not be tolerated in Cemâl's Syria."
  TUR_punishment_for_traitors_tt:0 "These decisions will §Ydecrease§! Arab opposition.\n"
+ TUR_reward_and_persuasion:0 "Reward and Persuasion"
+ TUR_reward_and_persuasion_desc:0 "The Arabist movement is a weak in its core with opportunists and corrupt figures infesting its ranks. Through rewarding and persuading such figures, we can promise their members with much more than the movement itself could provide."
  TUR_reward_and_persuasion_tt:0 "Effects when hired:\n"
+ TUR_crush_the_arabist_movement:0 "Crush the Arabist Movement"
+ TUR_crush_the_arabist_movement_desc:0 "Opposition of the Arabist movement and its effects on our lands have been minimized. While we still have the chance, we must put the nail on the coffin of the Arabist movement, and other separatist movements to come."
  TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation.\n"
  TUR_remove_arab_opposition_tt:0 "Remove §YArab Opposition§!.\n"
+ TUR_subject_christians:0 "Subject Christians"
+ TUR_subject_christians_desc:0 "Syria is home to many religions. From Shia to Sunni Muslims, Greek Orthodoxes to Maronite Christians, even the Druze, the region has numerous religious authorities. As many Christians communities have their loyalties in European powers rather than our empire, we'll move towards integrating their structures into the empire."
+ TUR_integrate_jewish_colonies:0 "Integrate Jewish Colonies"
+ TUR_integrate_jewish_colonies_desc:0 "Ever since Jewish immigration started to the holy lands, many wealthy Jews have started to purchase land and even started their own settler colonies in the region. As these colonies and overall Jewish communities are away from state control, its time for our state to pay a visit to these "independent" colonies."
+ TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
+ TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
+ TUR_ottoman_state_in_syria:0 "Ottoman State in Syria"
+ TUR_ottoman_state_in_syria_desc:0 "It is true that our state has neglected the Syrian provinces. Due to this region, both the people of Syria and overall integration of the provinces have been poor. As we'll assert the influence of the state in the regions, we'll move towards fixing the problems of these provinces."
+ TUR_ottoman_state_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
+ TUR_censor_the_opposition:0 "Censor the Opposition"
+ TUR_censor_the_opposition_desc:0 "Pro-autonomy and independence groups have been issuing their own newspapers and forms of communication to spread their ideas through the Syrian society. By banning their communication organs, we'll make our state the only legitimate source of information in the region."
+ TUR_censor_the_opposition_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
+ TUR_nationalize_railways:0 "Nationalize Railways"
+ TUR_nationalize_railways_desc:0 "Apart from the Hejaz Railway, most of the railway networks in Syria is operated by foreign powers, especially France. Through purchasing these railways, or seizing if the right time comes, we'll purpose these railways railways as a tool to spread state authority and achieve centralization."
+ TUR_nationalize_railways_tt:0 "If at war with §Y[FRA.GetName]§!, these decisions will be replaced and we'll be able to §Yseize§! mentioned §Yrailways§! and §Yports§! without paying a price.\n"
+ TUR_occupy_mount_lebanon:0 "Occupy Mount Lebanon"
+ TUR_occupy_mount_lebanon_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
+ TUR_settle_arab_tribes:0 "Settle Arab Tribes"
+ TUR_settle_arab_tribes_desc:0 "Tribal structures is the greatest underminer of the state authority. As many tribes reside within the Syrian region, we'll move towards settling them and integrating them as yet another citizen of the empire."
+ TUR_settle_arab_tribes_tt:0 "Unlocks £decision_icon_small  §YSettle Druze Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Bedouin Tribes§! Decisions.\nUnlocks £decision_icon_small  §YSettle Deir ez-Zor Tribes§! Decisions.\n"
+ TUR_the_ideal_province:0 "The Ideal Province"
+ TUR_the_ideal_province_desc:0 "While other provinces in the empire are being ruined by corruption and separatism, Syria under Cemâl Paşa has been overseeing a transition. Working day and night to create the perfect citizen for the empire, Cemâl has promise to successfully reform and centralize the Syrian provinces. His goal has been to create an ideal province our of Syria."
+ TUR_the_ideal_province_tt:0 "Unlocks £decision_icon_small  §YMass Education§! Decisions in §YAleppo Vilayet§!,§YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YConstruction Endeavours§! Decisions in §YAleppo Vilayet§!,§YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n\nUnlocks £decision_icon_small  §YIntegrate Arab Citizens§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Jewish Citizens§! Decisions.\nThese decisions will become visible once the §YCentralization§! of their respective §YVilayets§! become §Y100%§!.\n"
  TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
  TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
