--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -107,7 +107,7 @@
  VICTORY_POINTS_11954:1 "Bengazi"
  VICTORY_POINTS_7371:0 "Limbang"
  VICTORY_POINTS_3943:0 "Zara"
- VICTORY_POINTS_9860:0 "Mezereh"
+ VICTORY_POINTS_9860:0 "Harput"
  VICTORY_POINTS_6880:0 "Paro"
  VICTORY_POINTS_6889:0 "Ragusa"
  VICTORY_POINTS_13246:0 "Culiacan"
