--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -353,7 +353,7 @@
  STATE_352: "Van"
  STATE_353: "Erzurum"
  STATE_354: "Trebizond"
- STATE_355: "Samsun"
+ STATE_355: "Canik"
  STATE_356: "Kastamonu"
  STATE_357: "Massachusetts"
  STATE_358: "New York"
@@ -828,7 +828,7 @@
  STATE_827: "Darfur"
  STATE_828: "Hakkari"
  STATE_829: "Urfa"
- STATE_830: "Izbarta"
+ STATE_830: "Isparta"
  STATE_831: "Badiyah Ash-Sham"
  STATE_832: "Ruwaished"
  STATE_833: "Emilia"
