--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -638,6 +638,37 @@
  VICTORY_POINTS_711: "Gheorgheni"
  VICTORY_POINTS_3649: "Resita"
  VICTORY_POINTS_8185: "Annapolis"
+ VICTORY_POINTS_9929: "Aydın"
+ VICTORY_POINTS_3876: "Isparta"
+ VICTORY_POINTS_11907: "Burdur"
+ VICTORY_POINTS_9830: "Niğde"
+ VICTORY_POINTS_3714: "Rize"
+ VICTORY_POINTS_9868: "Gümüşhane"
+ VICTORY_POINTS_11844: "Kırşehir"
+ VICTORY_POINTS_11831: "Kütahya"
+ VICTORY_POINTS_9878: "Karahisar"
+ VICTORY_POINTS_3786: "Bilecik"
+ VICTORY_POINTS_9844: "Kangırı"
+ VICTORY_POINTS_3919: "Bolu"
+ VICTORY_POINTS_928: "Manisa"
+ VICTORY_POINTS_10122: "Muğla"
+ VICTORY_POINTS_11897: "Amasya"
+ VICTORY_POINTS_960: "Karahisar"
+ VICTORY_POINTS_3935: "Tokat"
+ VICTORY_POINTS_876: "Hozat"
+ VICTORY_POINTS_12416: "Mardin"
+ VICTORY_POINTS_13287: "Ergani"
+ VICTORY_POINTS_9858: "Muş"
+ VICTORY_POINTS_11797: "Erzincan"
+ VICTORY_POINTS_3526: "Serez"
+ VICTORY_POINTS_6930: "Serfice"
+ VICTORY_POINTS_13272: "Görice"
+ VICTORY_POINTS_9875: "İlbasan"
+ VICTORY_POINTS_9849: "Prizren"
+ VICTORY_POINTS_6913: "İpek"
+ VICTORY_POINTS_937: "Taşlıca"
+ VICTORY_POINTS_3879: "Tekirdağ"
+ VICTORY_POINTS_13061: "Kırkkilise"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
