--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -951,6 +951,10 @@
  IRE_UK_democratic_DEF:0 "Ирландское Свободное Государство"
  IRE_UK_neutrality:0 "Доминион Ирландия"
  IRE_UK_neutrality_DEF:0 "Доминион Ирландия"
+ IRE_IRA_fascism:0 "Ирландская Республиканская Армия"
+ IRE_IRA_fascism_DEF:0 "Ирландская Республиканская Армия"
+ IRE_IRA_neutrality:0 "Ирландская Республика"
+ IRE_IRA_neutrality_DEF:0 "Ирландская Республика"
  POL_RED_neutrality:0 "Королевство Редания"
  POL_RED_neutrality_DEF:0 "Королевство Редания"
  CHI_subject:0 "$OVERLORDADJ$ий Китай"
@@ -960,8 +964,8 @@
  PER_autonomy_colony_DEF:0 "$OVERLORDADJ$ая Персия"
  PER_autonomy_puppet_DEF:0 "$OVERLORDADJ$ая Персия"
  PER_autonomy_integrated_puppet_DEF:0 "Мандат Персии"
- PER_gendarmerie_fascism:0 "Персидская Правительственная Жандармерия"
- PER_gendarmerie_fascism_DEF:0 "Персидская Правительственная Жандармерия"
+ PER_gendarmerie_fascism:0 "Временное Национальное Правительство Персии"
+ PER_gendarmerie_fascism_DEF:0 "Временное Национальное Правительство Персии"
  TUR_autonomy_puppet_democratic:0 "Мандат Турции"
  TUR_autonomy_puppet_democratic_DEF:0 "Мандат Турции"
  HJZ_arabia:0 "Аравия"
@@ -1109,6 +1113,9 @@
  SAU_saudi_arabia_democratic_ADJ:0 "Аравийск"
  SAU_saudi_arabia_neutrality_ADJ:0 "Саудовск"
  SAU_saudi_arabia_fascism_ADJ:0 "Аравийск"
+ SAU_imamate: "Имамат Неджда"
+ SAU_imamate_DEF: "Имамат Неджда"
+ SAU_imamate_ADJ: "Недждск"
  NIR_never_never_never_democratic:0 "Королевство Ирландия"
  NIR_never_never_never_democratic_DEF:0 "Королевство Ирландия"
  NIR_never_never_never_democratic_ADJ:0 "Ирландск"
@@ -1885,6 +1892,11 @@
  ARM_andranik_neutrality:0 "Армянская Специальная Ударная Дивизия"
  ARM_andranik_neutrality_DEF:0 "Армянская Специальная Ударная Дивизия"
 
+ ARM_mountainous_fascism:0 "Горная Армения"
+ ARM_mountainous_fascism_DEF:0 "Республика Горная Армения"
+ ARM_mountainous_neutrality:0 "Горная Армения"
+ ARM_mountainous_neutrality_DEF:0 "Республика Горная Армения"
+
  MOR_SPR_autonomy_tgwr_protectorate:0 "Испанское Марокко"
  MOR_SPR_autonomy_tgwr_protectoratee_DEF:0 "Испанский протекторат в Марокко"
  MOR_SPR_autonomy_tgwr_informal_protectorate:0 "Испанское Марокко"
@@ -1912,3 +1924,6 @@
  PAP_vatican_ADJ:0 "Ватиканск"
  PAP_vatican_neutrality:0 "Город-Государство Ватикан"
  PAP_vatican_neutrality_DEF:0 "Город-Государство Ватикан"
+ 
+ SER_AUH_neutrality:0 "Сербия"
+ SER_AUH_fascism:0 "Сербия"
