--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -92,7 +92,7 @@
  LOADING_TIP_90: "Поговорите со мной о договорах! Поговорите со мной о Лиге Наций! Каждая Великая держава в Европе обязалась договором сохранить Бельгию. Это была Лига Наций, но она провалилась.\n- Эдвард Карсон"
  LOADING_TIP_91: "Мы не разжигали костер, но когда мы уйдем, он все равно будет гореть, и гореть, и гореть.\n- Билли Джоэл"
  LOADING_TIP_92: "Бог наделил британскую расу всемирной империей, чтобы они могли исполнить Его суверенную цель в мире. Победы, которые вы одержите над язычниками, - это победы более благородной души в человеке.\n- Неизвестный Чаплин"
- LOADING_TIP_93: "Солдаты! Герои! Верховное командование вычеркнуло наш полк из своих записей. Наш полк был принесен в жертву за честь Белграда и Отечества. Поэтому вам больше не нужно беспокоиться о своих жизнях: они больше не существуют. Итак, вперед к славе! За короля и Отечество! Да здравствует король, Да здравствует Белград!\n- Драгутин Гаврилович"
+ LOADING_TIP_93: "Солдаты! Герои! Верховное командование вычеркнуло наш полк из своих записей. Наш полк был принесен в жертву за честь Белграда и Отечества. Поэтому вам больше не нужно беспокоиться о своих жизнях: они больше не существуют. Итак, вперед к славе! За короля и Отечество!\n- Драгутин Гаврилович"
  LOADING_TIP_94: "Честно говоря, я наслаждался войной.\n- Адриан Картон де Виар"
  LOADING_TIP_95: "Нейтралитет - это не политика.\n- Элефтериос Венизелос"
  LOADING_TIP_96: "Не волнуйтесь, люди. Ничего хорошего не будет.\n- Никола Пашич"
@@ -103,3 +103,4 @@
  LOADING_TIP_101: "Китайская Республика - это маленький ребенок. О нем нужно заботиться и оберегать от несъедобной пищи и сильных лекарств, прописанных иностранными врачами.\n- Юань Шикай"
  LOADING_TIP_102: "При строительстве страны трудно найти не практиков, а идеалистов и планировщиков.\n- Сунь Ятсен"
  LOADING_TIP_103: "Меня пощадили в Сараево, чтобы я мог умереть, отомстив за это!\n- Оскар Потиорек"
+ 
