--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -241,10 +241,10 @@
  POR:0 "Португалия"
  POR_DEF:0 "Португалия"
  POR_ADJ:0 "Португальск"
- POR_neutrality_DEF:0 "Королевство Португалия"
- POR_democratic_DEF:0 "Королевство Португалия"
+ POR_neutrality_DEF:0 "Королевство Португалия и Алгарве"
+ POR_democratic_DEF:0 "Королевство Португалия и Алгарве"
  POR_fascism:0 "Интегралистская Португалия"
- POR_fascism_DEF:0 "Интегралистская Португалия"
+ POR_fascism_DEF:0 "Королевство Португалия и Алгарве"
  POR_communism:0 "Португальская Социалистическая Республика"
  POR_communism_DEF:0 "Португальская Социалистическая Республика"
  FIN_fascism:0 "Суоми"
@@ -2305,8 +2305,8 @@
  BAY_fascism_DEF:1 "Королевство Бавария"
  BAY_democratic:1 "Свободное Баварское Государство"
  BAY_democratic_DEF:1 "Свободное Баварское Государство"
- BAY_socialism:1 "Народное Государство Бавария"
- BAY_socialism_DEF:1 "Народное Государство Бавария"
+ BAY_social_democracy:1 "Народное Государство Бавария"
+ BAY_social_democracy_DEF:1 "Народное Государство Бавария"
  BAY_reformist_socialism:1 "Народное Государство Бавария"
  BAY_reformist_socialism_DEF:1 "Народное Государство Бавария"
  BAY_neutrality:0 "Королевство Бавария"
