--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -243,8 +243,8 @@
  RUS_significant_illiteracy: "Significant Illiteracy"
  RUS_moderate_illiteracy: "Moderate Illiteracy"
  RUS_slight_illiteracy: "Slight Illiteracy"
- RUS_monopolistic_capitalism: "Monopolistic Capitalism"
- RUS_natural_monopolies: "Natural Monopolies"
+ RUS_monopolistic_capitalism: "Monopoly Capitalism"
+ RUS_natural_monopolies: "State Monopoly Capitalism"
  RUS_jewish_question: "Jewish Question"
  RUS_jewish_question_desc: "After the Partitions of Poland, besides the majority slavic regions of Belarus and Ukraine, Russia has aquired territories with a sizeable Jewish minority. Ever since then, life of Jewish people in Russia has been pretty hard - restrictions of the government alongside antisemitic pogroms force them to either leave the country or join various revolutionary groups and fight for their rights."
  RUS_authoritarian_zemstvo: "Authoritarian Zemstvo"
