--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -279,7 +279,7 @@
  has_agrarian_question_scripted_trigger_tt: "Has national spirit §YAgrarian Question§!"
  has_labour_question_scripted_trigger_tt: "Has national spirit §YLabour Question§!"
  has_illiteracy_scripted_trigger_tt: "Has national spirit related to §YIlliteracy§!"
- has_monopolies_scripted_trigger_tt: "Has national spirit §YMonopolistic Capitalism§!"
+ has_monopolies_scripted_trigger_tt: "Has national spirit §YMonopoly Capitalism§!"
  has_authoritarian_zemstvo_scripted_trigger_tt: "Has national spirit §YAuthoritarian Zemstvo§!"
  not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
  duma_is_active_scripted_trigger_tt: "Not: The parliament has been dismissed"
