--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5423,15 +5423,22 @@ ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
 
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
-ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n\n"
+ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
+ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
+ROM_gdom:0 "Modify §YRomanian Army§! by\nFactory Output: §G+7.50%§!\n\n"
 
 ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
 ROM_german_industrial_aid2:0 "German Arms Embargo"
 ROM_adapt_to_times.tt:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
+ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
+
+ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
+ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
+
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
@@ -5439,7 +5446,14 @@ ww1_romania.41.a:0 "These terms aren't that bad"
 ww1_romania.41.b:0 "Who do they think they are?"
 ROM_adapt_times.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n\n"
 ROM_for_truth.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
+ROM_acds:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!"
+ROM_ads:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+10.00%§!"
+
 member_of_pc:0 "Member of §cPC§!"
+ROM_the_southern_wall:0 "The Southern Wall"
+ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
+ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
+ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
