--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -386,7 +386,7 @@
  TUS_communism_party:0 "ИСП"
  TUS_communism_party_long:0 "Итальянская Социалистическая Партия"
  TUS_neutrality_party:0 "Дом Габсбургов"
- TUS_neutrality_party_long:0 "Габсбургско-Лотарингский дом"
+ TUS_neutrality_party_long:0 "Дом Габсбургов-Лотарингских"
 
  VNC_fascism_party:0 "ИНА"
  VNC_fascism_party_long:0 "Итальянская Националистическая Ассоциация"
@@ -495,9 +495,15 @@
  NFA_fascism_party_long:0 "Временное Военное Правительство"
  NFA_petain_party:0 "Правительство Петена"
 
+ FRA_francists:0 "Франсистская Партия"
+ FRA_francists_long:0 "Франсистская Партия"
+
+ FRA_faisceau:0 "Ле Файсо"
+ FRA_faisceau_long:0 "Ле Файсо"
+
  FRA_PCF:0 "КПФ"
  FRA_PCF_long:0 "Коммунистическая Партия Франции"
-
+ FRA_CNI:0 "Комитеты Наполеоновских Империалистов"
  VIN_empire_fascist:0 "Великое Государство Мин"
  VIN_empire_fascist_long:0 "Великое Государство Мин"
 
@@ -1030,8 +1036,8 @@
  BEL_fascism_party:0 "Партия Фронта"
  BEL_resistance:0 "СВСВ"
  BEL_resistance_long:0 "Самое Верное Сопротивление Его Величества"
- BEL_occupation_party:0 "ГИГгБ"
- BEL_occupation_party_long:0 "Германская Имперская Генерал-Губернаторство Бельгии"
+ BEL_occupation_party:0 "ГИГГБ"
+ BEL_occupation_party_long:0 "Германское Имперское Генерал-Губернаторство Бельгии"
  BEL_army_party:0 "Вооруженные Силы Бельгии"
  
  SWI_fascism_party:0 "ШПА"
@@ -1151,7 +1157,8 @@
  URG_communism_party:0 "СПУ"
  URG_communism_party_long:0 "Социалистическая Партия Уругвая"
  
- VEN_neutrality_party:0 "Винсентианцы"
+ VEN_neutrality_party:0 "Висентистас"
+ VEN_fascism_party:0 "Висентистас"
  VEN_democratic_party:0 "Демократические Действия"
  VEN_communism_party:0 "ВРП"
  VEN_communism_party_long:0 "Венесуэльская Революционная Партия"
@@ -1164,18 +1171,20 @@
  PRU_democratic_reformist_party:0 "РДП"
  PRU_democratic_reformist_party_long:0 "Реформистская Демократическая Партия"
  
- IRE_fascism_party:0 "ИРБ"
+ IRE_fascism_party:0 "ИРБ" #Irish Republican Brotherhood
  IRE_fascism_party_long:0 "Ирландское Республиканское Братство"
  IRE_democratic_party:0 "ИРБ"
- IRE_democratic_party_long:0 "Ирландское Республиканское Братство"
+ IRE_democratic_party_long:0 "Ирландское Республиканское Братство" #Irish Republican Brotherhood
  IRE_neutrality_party:0 "ИЮА"
  IRE_neutrality_party_long:0 "Ирландский Юнионистский Альянс"
- IRE_democratic_gaels_party:0 "на н'Гэл"
+ IRE_democratic_gaels_party:0 "Общество Гэлов"
  IRE_democratic_gaels_party_long:0 "Общество Гэлов"
+ IRE_democratic_sinn_fein_party:0 "Шинн Фейн"
+ IRE_democratic_society_of_republic_party:0 "Республиканская Ассоциация" #Society of the Republic
  IRE_communism_party:0 "КПИ"
  IRE_communism_party_long:0 "Коммунистическая Партия Ирландии"
- IRE_republican_army:0 "АИР"
- IRE_republican_army_long:0 "Армия Ирландской Республики "
+ IRE_republican_army:0 "СОИ"
+ IRE_republican_army_long:0 "Силы Обороны Ирландии"
  IRE_governorship_party:0 "Губернаторство"
  IRE_governorship_party_long:0 "Губернаторство Свободное Ирландское Государство"
  
@@ -1211,6 +1220,7 @@
  
  SAU_neutrality_party:0 "Дом Саудов"
  SAU_fascism_party:0 "Дом Саудов"
+ SAU_democratic_party:0 "Совет Шуры"
 
  YEM_neutrality_party:0 "Дом Рассидов"
  YEM_fascism_party:0 "Дом Рассидов"
@@ -1347,6 +1357,7 @@
  UKR_fascism_party_long:0 "Украинская Войсковая Организация"
  UKR_directory_party:0 "Директория"
  UKR_monarchy_party:0 "Дом Габсбургов"
+ UKR_monarchy_party_long:0 "Дом Габсбургов-Лотарингских"
 
  GEO_democratic_party:0 "СДПГ"
  GEO_democratic_party_long:0 "Социал-Демократическая Партия Грузии"
@@ -1446,7 +1457,9 @@
  PRI_communism_party:0 "Земская Управа"
  PRI_communism_party_long:0 "Приморская Областная Земская Управа"
  
- HJZ_neutrality_party:0 "Катадиды"
+ HJZ_neutrality_party:0 "Хашимиты"
+ HJZ_democratic_party:0 "НПХ"
+ HJZ_democratic_party_long:0 "Национальная Партия Хиджаза"
 
  MOR_neutrality_party:0 "Дом Алауитов"
  MOR_french_colonial_party:0 "Колониальная Администрация"
@@ -1478,7 +1491,9 @@
  GAL_communism_party:0 "ПСП"
  GAL_communism_party_long:0 "Польская Социалистическая Партия"
  GAL_communist_party:0 "Галревком"
- GAL_communist_party_long:0 "Революционный комитет Галиции"
+ GAL_communist_party_long:0 "Революционный Комитет Галиции"
+ GAL_neutrality_party:0 "Парламент"
+ GAL_neutrality_party_long:0 "Парламент Галиции"
 
  CRO_democratic_party:0 "ХНКП"
  CRO_democratic_party_long:0 "Хорватская Народная Крестьянская Партия"
@@ -1562,6 +1577,8 @@
  TUN_communism_party:0 "Движение Аш-Шабааб"
  TUN_communism_party_long:0 "Движение аш-Шабаб аль-Туниси"
  TUN_colonial_party:0 "Колониальная Администрация"
+ TUN_destour_long:0 "Конституционная Либеральная Партия"
+ TUN_destour:0 "Дестур"
  
  KUR_democratic_party:0 "ОУПК"
  KUR_democratic_party_long:0 "Общество по Улучшению Положения Курдистана"
@@ -1577,11 +1594,12 @@
  PHI_neutrality_party_long:0 "Филиппинская Независимая Церковь"
 
  RHN_fascism_party:0 "Военная Администрация"
- RHN_fascism_party_long:0 "Французская военная администрация"
- RHN_democratic_party:0 "Партия Центра"
- RHN_democratic_party_long:0 "Немецкая Центристская Партия"
+ RHN_fascism_party_long:0 "Французская Военная Администрация"
+ RHN_democratic_party:0 "Лига Независимости"
+ RHN_democratic_party_long:0 "Лига Независимости Рейна"
  RHN_communism_party:0 "Рабочие Советы"
- RHN_neutrality_party:0 "Фрайкор"
+ RHN_neutrality_party:0 "МРВК"
+ RHN_neutrality_party_long:0 "Межсоюзническая Рейнская Верховная Комиссия"
 
  BAY_neutrality_party:0 "Дом Виттельсбах"
  BAY_democratic_party:0 "СДП"
@@ -1906,9 +1924,13 @@
  MCO_democratic_party:0 "Монакский Комитет"
  
  LIE_neutrality_party:0 "Дом Лихтенштейнов"
- LIE_democratic_party:0 "Независимые"
+ LIE_democratic_party:0 "Парламент Лихтенштейна"
+ LIE_democratic_party_long:0 "Парламент Княжества Лихтенштейн"
  LIE_CSVP_party:0 "ХСНП"
  LIE_CSVP_party_long:0 "Христианская Социальная Народная Партия"
+ LIE_fascism_party:0 "ЛРСРИ"
+ LIE_fascism_party_long:0 "Лига Реформации Священной Римской Империи"
+ LIE_communism_party:0 "Трудовой Союз"
  
  ADR_neutrality_party:0 "Генеральный Совет Андорры"
  ADR_democratic_party:0 "Генеральный Совет Андорры"
