--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -442,10 +442,23 @@
  CHI_uprising_alt_neutrality_DEF:0 "the Beiyang Government of the Republic of China"
  CHI_uprising_alt_democratic:0 "Beiyang Government"
  CHI_uprising_alt_democratic_DEF:0 "the Beiyang Government of the Republic of China"
+ CHI_hubei:0 "Hubei"
+ CHI_hubei_DEF:0 "Hubei"
+ CHI_hubei_ADJ:0 "Hubei"
+ CHI_hubei_neutrality_DEF:0 "the Hubei Military Government"
+ CHI_hubei_democratic_DEF:0 "the Hubei Revolutionary Government"
+ CHI_hubei_fascism_DEF:0 "the Hubei Military Government"
+ CHI_hubei_communism_DEF:0 "the Hubei Revolutionary Government"
  CHI_revolution:0 "Revolutionary China"
- CHI_revolution_neutrality:0 "Hubei"
- CHI_revolution_neutrality_DEF:0 "the Hubei Military Government"
+ CHI_revolution_DEF:0 "Revolutionary China"
  CHI_revolution_democratic:0 "Chinese Revolutionary Alliance"
+ CHI_revolution_democratic_DEF:0 "the Chinese Revolutionary Alliance"
+ CHI_revolution_communism:0 "Chinese Revolutionary Front"
+ CHI_revolution_communism_DEF:0 "the Chinese Revolutionary Front"
+ CHI_revolution_neutrality:0 "Chinese Revolutionary Junta"
+ CHI_revolution_neutrality_DEF:0 "the Chinese Revolutionary Junta"
+ CHI_revolution_fascism:0 "Chinese Revolutionary Junta"
+ CHI_revolution_fascism_DEF:0 "the Chinese Revolutionary Junta"
  CHI_neutrality_sichuan:0 "Sichuan"
  CHI_neutrality_sichuan_DEF:0 "the Sichuan Military Government"
  CHI_neutrality_hubei:0 "Hubei"
