--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1183,8 +1183,8 @@
  IRE_democratic_society_of_republic_party:0 "Республиканская Ассоциация" #Society of the Republic
  IRE_communism_party:0 "КПИ"
  IRE_communism_party_long:0 "Коммунистическая Партия Ирландии"
- IRE_republican_army:0 "СОИ"
- IRE_republican_army_long:0 "Силы Обороны Ирландии"
+ IRE_republican_army:0 "ИРА"
+ IRE_republican_army_long:0 "Ирландская республиканская армия"
  IRE_governorship_party:0 "Губернаторство"
  IRE_governorship_party_long:0 "Губернаторство Свободное Ирландское Государство"
  
