--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5433,7 +5433,7 @@ ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\
 ROM_german_industrial_aid2:0 "German Arms Embargo"
 ROM_adapt_to_times.tt:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 ww1_romania.42.t:0 "Germany Demands Military Access"
-ww1_romania.42.d:0 "Germany has sent a message informing us that they will stop selling weapons to us if we do not allow German supplies and troops to flow through Romanian territory, defacto demanding we give them permission to send divisions through our land. While it would compromise our neutrality significantly, we may be too dependent on Germany to say no. How should we reply?"\
+ww1_romania.42.d:0 "Germany has sent a message informing us that they will stop selling weapons to us if we do not allow German supplies and troops to flow through Romanian territory, defacto demanding we give them permission to send divisions through our land. While it would compromise our neutrality significantly, we may be too dependent on Germany to say no. How should we reply?"
 ww1_romania.42.a "Lets not anger them..."
 ww1_romania.42.b:0 "We will find markets elsewhere, then"
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
