--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5189,7 +5189,7 @@ ROM_towards_an_industrial_economy_desc:0 ""
 ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
-ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it. We shall order the police to crackdown on the disruptive protests, until the brats learn how to accept democracy."
+ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carps new government. While we'd usually be fine with these retards fucking off, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
 ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
 ROM_decentralization:0 "Decentralization"
@@ -5253,7 +5253,7 @@ ROM_land_reform_fail:0 "§YLand Reform Bill§! has §RFailed§!"
 land_reform_fail:0 "The land reform bill will §Rnot§! pass"
 ROM_bratianu_resign:0 "Bratianus' Resignation"
 ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
-on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\nPolitical Power Gain:§G+0.10§!"
+on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\nPolitical Power Gain: §G+0.10§!"
 ROM_king_carols_reign:0 "King Carol's Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, has lead us well so far. With his great wisdom, Romania has gone from a rump puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
