--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5190,13 +5190,36 @@ ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
 ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carps new government. While we'd usually be fine with these retards fucking off, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
+ROM_reduce_reliance_on_german_steel:0 "Reduce Reliance on German Steel"
+ROM_law_on_mobilization:0 "Law On Mobilization"
+ ROM_study_enemy_cartography:0 "Study Enemy Cartography"
+ ROM_general_directorate_of_munitions:0 "The General Directorate of Munitions"
+ ROM_expansion_of_the_officer_corp:0 "Expand the Officer Corp"
+ ROM_build_a_domesic_arms_industry:0 "An Issue of National Security"
+ ROM_beggers_cant_be_chosers:0 "Beggers Can't Be Chosers"
+ROM_a_common_divison_structure:0 "A Common Division Structure"
+ROM_restructure_the_high_command:0 "Reshuffle the High Command"
+ROM_training_schools:0 "Open Up Training Schools"
+ ROM_autonomous_army_structure:0 "Autonomous Army Structure"
+ROM_political_unity:0 "War-Time Coalition"
+ROM_psychological_warfare:0 "Phychological Warfare"
 ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
 ROM_decentralization:0 "Decentralization"
+ROM_revive_the_committee_on_the_agrarian_question:0 "Revive the Committee on the Agrarian Question"
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
 ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
+ROM_religious_tolerance:0 "Religious Tolerance"
+ROM_the_uniting_principal:0 "The Uniting Principals"
+ROM_compassionate_conservatism:0 "Compassionate Conservatism"
+ROM_building_a_new_consensus:0 "Building a new Concensus"
+ROM_what_were_fighting_for:0 "What We're Fighting For"
+ROM_romania_for_those_who_earn_it:0 "Romania For Those Who Earn It"
+ROM_those_who_are_often_forgotten:0 "Those Who Are Often Forgotten"
+ ROM_cut_government_bloat:0 "Cut Government Bloat"
 right_wing_populist:0 "Right Wing Populist"
+ROM_the_crowned_jewl:0 "The Crowned Jewl"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
