пингуйте меня если надо исправить

--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1184,7 +1184,7 @@
  IRE_communism_party:0 "КПИ"
  IRE_communism_party_long:0 "Коммунистическая Партия Ирландии"
  IRE_republican_army:0 "ИРА"
- IRE_republican_army_long:0 "Ирландская республиканская армия"
+ IRE_republican_army_long:0 "Ирландская Республиканская Армия"
  IRE_governorship_party:0 "Губернаторство"
  IRE_governorship_party_long:0 "Губернаторство Свободное Ирландское Государство"
  
