--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1031,6 +1031,8 @@
  STATE_1030: "Amasya"
  STATE_1031: "Sinop"
  STATE_1032: "District of Columbia"
+ STATE_1033: "Niğde"
+ STATE_1034: "Lazistan"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
