--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3391,13 +3391,14 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_konya_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_konya_centralization|Y0%][ottoman_konya_vilayet_centralization_value]"
  ottoman_konya_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_konya_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_konya_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_konya_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_konya_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_konya_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_konya_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_konya_vc_effect|+%]"
  ottoman_konya_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_konya_vilayet_stability_factor][ottoman_konya_vilayet_war_support_factor][ottoman_konya_vilayet_political_power_factor]"
- ottoman_konya_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_konya_vilayet_stability_factor][ottoman_konya_vilayet_war_support_factor][ottoman_konya_vilayet_political_power_factor][ottoman_konya_vilayet_346][ottoman_konya_vilayet_830][ottoman_konya_vilayet_911]"
+ ottoman_konya_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_konya_vilayet_stability_factor][ottoman_konya_vilayet_war_support_factor][ottoman_konya_vilayet_political_power_factor][ottoman_konya_vilayet_346][ottoman_konya_vilayet_830][ottoman_konya_vilayet_911][ottoman_konya_vilayet_1033]"
  ottoman_konya_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_konya_stability_factor|=2%+]"
  ottoman_konya_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_konya_war_support_factor|=2%+]"
  ottoman_konya_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_konya_political_power_factor|=0%+]"
  ottoman_konya_vilayet_346_yes:0 "\n§Y[346.GetName]§!:[TUR_turkish_population_346]"
  ottoman_konya_vilayet_830_yes:0 "\n§Y[830.GetName]§!:[TUR_turkish_population_830]"
  ottoman_konya_vilayet_911_yes:0 "\n§Y[911.GetName]§!:[TUR_turkish_population_911]"
+ ottoman_konya_vilayet_1033_yes:0 "\n§Y[1033.GetName]§!:[TUR_greek_population_1033][TUR_turkish_population_1033]"
 
  TUR_ankara_vilayet:0 "Ankara Vilayet"
  TUR_ankara_vilayet_desc:0 "[TUR_ankara_vilayet_desc]"
@@ -3423,12 +3424,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_trabzon_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_trabzon_centralization|Y0%][ottoman_trabzon_vilayet_centralization_value]"
  ottoman_trabzon_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_trabzon_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_trabzon_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_trabzon_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_trabzon_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_trabzon_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_trabzon_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_trabzon_vc_effect|+%]"
  ottoman_trabzon_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_trabzon_vilayet_stability_factor][ottoman_trabzon_vilayet_war_support_factor][ottoman_trabzon_vilayet_political_power_factor]"
- ottoman_trabzon_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_trabzon_vilayet_stability_factor][ottoman_trabzon_vilayet_war_support_factor][ottoman_trabzon_vilayet_political_power_factor][ottoman_trabzon_vilayet_354][ottoman_trabzon_vilayet_355]"
+ ottoman_trabzon_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_trabzon_vilayet_stability_factor][ottoman_trabzon_vilayet_war_support_factor][ottoman_trabzon_vilayet_political_power_factor][ottoman_trabzon_vilayet_354][ottoman_trabzon_vilayet_355][ottoman_trabzon_vilayet_1034]"
  ottoman_trabzon_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_trabzon_stability_factor|=2%+]"
  ottoman_trabzon_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_trabzon_war_support_factor|=2%+]"
  ottoman_trabzon_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_trabzon_political_power_factor|=0%+]"
  ottoman_trabzon_vilayet_354_yes:0 "\n§Y[354.GetName]§!:[TUR_greek_population_354][TUR_turkish_population_354]"
  ottoman_trabzon_vilayet_355_yes:0 "\n§Y[355.GetName]§!:[TUR_greek_population_355][TUR_turkish_population_355]"
+ ottoman_trabzon_vilayet_1034_yes:0 "\n§Y[1034.GetName]§!:[TUR_georgian_population_1034][TUR_turkish_population_1034]"
 
  TUR_sivas_vilayet:0 "Sivas Vilayet"
  TUR_sivas_vilayet_desc:0 "[TUR_sivas_vilayet_desc]"
@@ -4240,6 +4242,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_greek_population_348_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_348_greek_population_stability_factor|=2%+]"
  TUR_greek_population_348_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_348_greek_population_war_support_factor|=2%+]"
  TUR_greek_population_348_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_348_greek_population_war_support_factor|=0%+]"
+ TUR_greek_population_1033_yes:0 "\n£ww1_game_rule_flag_GRE  §YGreek Minority§![TUR_greek_population_1033_stability_factor][TUR_greek_population_1033_war_support_factor][TUR_greek_population_1033_political_power_factor]"
+ TUR_greek_population_1033_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1033_greek_population_stability_factor|=2%+]"
+ TUR_greek_population_1033_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1033_greek_population_war_support_factor|=2%+]"
+ TUR_greek_population_1033_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1033_greek_population_war_support_factor|=0%+]"
  TUR_greek_population_354_yes:0 "\n£ww1_game_rule_flag_GRE  §YGreek Minority§![TUR_greek_population_354_stability_factor][TUR_greek_population_354_war_support_factor][TUR_greek_population_354_political_power_factor]"
  TUR_greek_population_354_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_354_greek_population_stability_factor|=2%+]"
  TUR_greek_population_354_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_354_greek_population_war_support_factor|=2%+]"
@@ -4956,6 +4962,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_georgian_population_855_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_855_georgian_population_stability_factor|=2%+]"
  TUR_georgian_population_855_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_855_georgian_population_war_support_factor|=2%+]"
  TUR_georgian_population_855_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_855_georgian_population_war_support_factor|=0%+]"
+ TUR_georgian_population_1034_yes:0 "\n£ww1_flag_GEO  §YGeorgian Minority§![TUR_georgian_population_1034_stability_factor][TUR_georgian_population_1034_war_support_factor][TUR_georgian_population_1034_political_power_factor]"
+ TUR_georgian_population_1034_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1034_georgian_population_stability_factor|=2%+]"
+ TUR_georgian_population_1034_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1034_georgian_population_war_support_factor|=2%+]"
+ TUR_georgian_population_1034_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1034_georgian_population_war_support_factor|=0%+]"
  TUR_romanian_population_46_yes:0 "\n£ww1_flag_ROM  §YRomanian Minority§![TUR_romanian_population_46_stability_factor][TUR_romanian_population_46_war_support_factor][TUR_romanian_population_46_political_power_factor]"
  TUR_romanian_population_46_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_46_romanian_population_stability_factor|=2%+]"
  TUR_romanian_population_46_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_46_romanian_population_war_support_factor|=2%+]"
@@ -5116,6 +5126,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_348_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_348_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_348_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_348_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_348_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_348_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1033_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1033_stability_factor][TUR_turkish_population_1033_war_support_factor][TUR_turkish_population_1033_political_power_factor]"
+ TUR_turkish_population_1033_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1033_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1033_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1033_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1033_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1033_turkish_population_war_support_factor|=0%+]"
  TUR_turkish_population_349_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_349_stability_factor][TUR_turkish_population_349_war_support_factor][TUR_turkish_population_349_political_power_factor]"
  TUR_turkish_population_349_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_349_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_349_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_349_turkish_population_war_support_factor|=2%+]"
@@ -5236,6 +5250,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_855_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_855_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_855_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_855_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_855_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_855_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1034_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1034_stability_factor][TUR_turkish_population_1034_war_support_factor][TUR_turkish_population_1034_political_power_factor]"
+ TUR_turkish_population_1034_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1034_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1034_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1034_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1034_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1034_turkish_population_war_support_factor|=0%+]"
  TUR_turkish_population_857_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_857_stability_factor][TUR_turkish_population_857_war_support_factor][TUR_turkish_population_857_political_power_factor]"
  TUR_turkish_population_857_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_857_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_857_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_857_turkish_population_war_support_factor|=2%+]"
@@ -6061,8 +6079,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_declare_jihad_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Recovery Rate: §G+3.0%§!\nWeekly £war_support_modifiericons_texticon  War Support (Combat Casualties): §G+0.20%§!\n\n"
  TUR_renounce_our_claims:0 "Renounce our Claims"
  TUR_renounce_our_claims_desc:0 "Our empire has lost most of its lands in the recent years. Yet this upcoming war is a great opportunity for us to allign with a great power and claim some of our lost territories."
- TUR_declare_nation_wide_martial_law:0 "Declare Nation Wide Martial Law"
- TUR_declare_nation_wide_martial_law_desc:0 "Our capital has already been under martial law since the 31 March Incident. As we enter the Great War, it's the perfect opportunity to widen the range and effect of the martial law."
  TUR_army_of_a_bygone_era_name_1:0 "§YArmy of a Bygone Era§!"
  TUR_army_of_a_bygone_era_name_2:0 "§YArmy of the Modern Era§!"
  TUR_integrate_shia:0 "Integrate Shia Muslims in [FROM.GetName]"
