--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1033,6 +1033,7 @@
  STATE_1032: "District of Columbia"
  STATE_1033: "Niğde"
  STATE_1034: "Lazistan"
+ STATE_1035: "Adapazarı"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
