--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -669,6 +669,7 @@
  VICTORY_POINTS_937: "Taşlıca"
  VICTORY_POINTS_3879: "Tekirdağ"
  VICTORY_POINTS_13061: "Kırkkilise"
+ VICTORY_POINTS_890:0 "Adapazarı"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
